fix: z-index to header

--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,8 @@
 	display: flex;
 	justify-content: space-between;
 	margin-bottom: 200px;
+	z-index: 100;
+	position: relative;
 }
 
 .header_navigation {
